# 22209-Surkova

./: .gitmodules  CMakeLists.txt  CountWords.cpp  CountWords.h  README.md  main.cpp
Lab0/: CMakeLists.txt  CountWords.cpp  CountWords.h  Letter.cpp  Letter.h  README.md  WordData.h  main.cpp
Lab1/: BitArray.cpp  BitArray.h  CMakeLists.txt  README.md  main.cpp  test.cpp
Lab2/: CMakeLists.txt  Cell.h  Coords.h  FieldManager.cpp  FieldManager.h  FileData.h  GameManager.cpp  GameManager.h  GameParams.h  LifeManager.cpp  LifeManager.h  ParserInputFile.cpp  ParserInputFile.h  README.md  UiManager.cpp  UiManager.h  main.cpp  output.txt  test.cpp
Lab3/: CMakeLists.txt  Error.cpp  Errors.h  WAVHeader.h  main.cpp
Lab3/Configurator/: Config.h  Configurator.cpp  Configurator.h  ReaderConfigFile.cpp  ReaderConfigFile.h
Lab3/Converters/: CMakeLists.txt  FactoryItems.cpp  FactoryItems.h  Tags.h
Lab3/Converters/FlexConverter/include/: FlexConverter.h
Lab3/Converters/FlexConverter/src/: FlexConverter.cpp
Lab3/Converters/IConverter/: AliasNames.h  ConvertersAliasNames.h  IConverter.h  IConverterStruct.h  StreamReader.h
Lab3/Converters/MixConverter/include/: MixConverter.h
Lab3/Converters/MixConverter/src/: MixConverter.cpp
Lab3/Converters/MuteConverter/include/: MuteConverter.h
Lab3/Converters/MuteConverter/src/: MuteConverter.cpp
Lab3/Factory/: CMakeLists.txt
Lab3/Factory/include/: AliasNames.h  FactoryCreator.h  IFactory.h  Tag.h
Lab3/Factory/src/: Factory.cpp  Factory.h  FactoryCreator.cpp
Lab3/Utils/: CMakeLists.txt
Lab3/Utils/include/: Configurator.h  Errors.h
Lab3/Utils/src/: Configurator.cpp  Error.cpp
Lab3/WAVFileManager/: CMakeLists.txt
Lab3/WAVFileManager/include/: WAVFileManager.h  WAVHeader.h  WAVHeaderParser.h  WAVStreamReader.h  WAVStreamWriter.h
Lab3/WAVFileManager/src/: WAVFileManager.cpp  WAVHeaderParser.cpp  WAVStreamReader.cpp  WAVStreamWriter.cpp
Lab4/: CMakeLists.txt  main.cpp
Lab4/CSVParser/: CMakeLists.txt
Lab4/CSVParser/include/: CSVParser.h
